syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.IKov.TimelineService";
option java_outer_classname = "GetTwittsProto";

service GetTwitts{
  rpc GetRandomTwitts (GetTwittRandomRequest) returns (GetTwittRandomReply);
  rpc GetTrendTwitts (GetTwitTrendRequest) returns (GetTwittTrendReply);
  rpc GetTwittsGraph (GetTwittGraphRequest) returns (GetTwittGraphReply);
}

message GetTwittRandomRequest{
  int32 twittsNumber = 1;
}

message GetTwittRandomReply{
  repeated Twitt twitt = 1;
}

message GetTwittGraphRequest{
  int32 twittsNumber = 1;
  string userId = 2;
}

message GetTwittGraphReply{
  repeated Twitt twitt = 1;
}

message GetTwitTrendRequest{
  int32 twittNumber = 1;
}

message GetTwittTrendReply{
  repeated Twitt twitt = 1;
}

message Twitt{
  string userTag = 1;
  string twittText = 3;
  string twittHeader = 4;
  repeated string twittTags = 5;
  google.protobuf.Timestamp createdAt = 6;
}